--- a/Assignment-1/boards.html
+++ b/Assignment-1/boards.html
@@ -3,11 +3,12 @@
 <html>
      <head> 
         <title>Beginning</title>
+        <link rel="stylesheet" href="main.css">
 
     </head>
     <body> <!-- This is the name of my school and title of my boards page -->
-        <h1>UAT</h1>
-        <p> 
+        <h1>UAT Robotics</h1>
+        <p><img class="img-princessbride" src="img/Princessbride.jpg" alt="meme"></p>
             <ul> <!-- These are the objects for UAT's Robotics course -->
                 <li>Design and complete robotic and embedded systems solutions that address real-world situations and challenges.</li>
                 <li>Demonstrate embedded microprocessor system skills such as microcontroller selection, digital logic design, schematic 
