--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -5,6 +5,7 @@
 
     </head>
     <body>
+        <link rel="stylesheet" href="main.css">
         <h1>Header</h1>
         <p><img src="img/Princessbride.jpg" alt="meme"></p>
     </body>
