--- a/Assignment-1/games.html
+++ b/Assignment-1/games.html
@@ -15,7 +15,7 @@
     <!-- Paragraph for displaying the result -->
     <p id="lblResult">Press 'Roll Dice' to start the game</p>
         <p img src="Dice6.png"
-    <!-- Container for the dice images-->
+    <!- -</p> Container for the dice images </-->
     <div id="diceContainer">
         <div id="pbDieImage1"></div>
         <div id="pbDieImage2"></div>
