--- a/Assignment-1/games.html
+++ b/Assignment-1/games.html
@@ -14,8 +14,8 @@
     <h1>Craps Game</h1>
     <!-- Paragraph for displaying the result -->
     <p id="lblResult">Press 'Roll Dice' to start the game</p>
-        <p img src="Dice6.png"
-    <!- -</p> Container for the dice images </-->
+        <p img src="Dice6.png"></p>
+    <!--Container for the dice images </-->
     <div id="diceContainer">
         <div id="pbDieImage1"></div>
         <div id="pbDieImage2"></div>
