--- a/Assignment-1/4.1.html
+++ b/Assignment-1/4.1.html
@@ -9,7 +9,13 @@
     <script src="4.1.js"></script>
 </head>
 <body>
-
+    <table>
+        <tbody>
+            <tr>
+                <td><a href="Final.html" class="home-link">Home</a></td>
+            </tr>
+        </tbody>
+    </table>
     <!--Title-->
     <div class="contact-banner">
         <h1>Event Driven Programming</h1>
