--- a/Assignment-1/Game Design.html
+++ b/Assignment-1/Game Design.html
@@ -11,6 +11,13 @@
 </head> 
   
 <body> 
+    <table>
+        <tbody>
+            <tr>
+                <td><a href="Final.html" class="home-link">Home</a></td>
+            </tr>
+        </tbody>
+    </table>
     <div class="container"> 
         <h1>Let's Play</h1> 
   
@@ -36,7 +43,8 @@
             onClick="editNames()"> 
             Edit Names 
         </button> 
-    </div> 
+    </div>
+
 </body> 
   
 </html> 
