--- a/Assignment-1/Strings.html
+++ b/Assignment-1/Strings.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
-<!--Kenneth Woitte-->
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Validation</title>
-    <!--Stylesheets and Script-->
-    <link rel="stylesheet" href="Strings.css" />
-    <script src="Strings.js"></script>
-  </head>
-
-  <body>
-    <!-- Form Title-->
-    <div class="contact-banner">
-      <h1>Form Validation</h1>
-    <!--Form Instruction-->
-      <p class="contact-description">
-       Please enter your information down below!
-      </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Form Validation</title>
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="Strings.css">
+</head>
+<body>
+ <!--Table Design-->
+ <table>
+  <tbody>
+      <tr>
+          <td><a href="Final.html" class="home-link">Home</a></td>
+      </tr>
+  </tbody>
+</table>
+  <!-- Form Title-->
+  <div class="contact-banner">
+    <h1>Form Validation</h1>
+    <!-- Form Setup-->
+    <p class="contact-description">
+      Please enter your information below!
+    </p>
+  </div>
+  <!-- Form Required Info -->
+  <form id="contact-form">
+    <div class="form-control">
+      <label for="name">Full Name</label>
+      <input type="text" id="name" name="name" placeholder="First and Last Name" required>
+      <div class="error hide" id="name-error">Name is required</div>
     </div>
-    <!--Form Required Info-->
-    <form fullname="contact-form">
-      <div class="form-control">
-        <label>Full Name</label>
-        <input fullname="name"
-          placeholder="First and Last Name" />
-        <div class="error hide">Name is required</div>
-      </div>
-      <!--Form Zipcode-->
-      <div class="form-control">
-        <label>Zipcode</label>
-        <input fullname="Zipcode"
-        ></input>
-        <div class="error hide">Zipcode is invalid</div>
-      </div>
-
-      <hr />
-
-      <button type="submit">SUBMIT FORM</button>
-    </form>
-
-  </body>
-</html>
-
-          </form>
-      
-            <p id="result"></p>
+    <!-- Form Zipcode -->
+    <div class="form-control">
+      <label for="zipcode">Zipcode</label>
+      <input type="text" id="zipcode" name="zipcode" placeholder="Zipcode" pattern="\d{5}" required>
+      <div class="error hide" id="zipcode-error">Zipcode is invalid</div>
     </div>
-  </body>
+    <hr />
+    <button type="submit">SUBMIT FORM</button>
+  </form>
+  <!-- Script -->
+  <script src="Strings.js"></script>
+</body>
 </html>
